Diseño de trabajos

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
 
 
     <script type="module" src="./js/main.js"></script>
+    <script src="./js/repositorios.js" type="module"></script>
 </body>
 </html>
