--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
 
     <script type="module" src="./js/main.js"></script>
     <script src="./js/repositorios.js" type="module"></script>
+    <script type="module" src="./js/soporte.js"></script>
 </body>
 </html>
